--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.daniels.myapplication.Table">
 
 
-    <!-- column 1 -->
+    <!-- colum 1 -->
 
     <TextView
         android:id="@+id/coinName"
